Issue #7504 Share map modal window not showing correctly on mobile
Applied styles changes to CSS, targeting the share modal window rather than
the component settings to 'lift up' the modal from its original position
on the screen, hide overflow-x on modal body for smaller screens as it
was showing unnecessarily.

--- a/web/client/themes/default/less/share.less
+++ b/web/client/themes/default/less/share.less
@@ -93,13 +93,12 @@
 }
 
 .ms-resizable-modal > .modal-content.share-win {
+    top: -10%;
     @media (min-width: @screen-sm-min) {
         height: 50%;
-        .share-panel-modal-body {
-            overflow-x: hidden;
-        }
     }
     .modal-body > .share-panel-modal-body {
+        overflow-x: hidden;
         padding: 8px;
         .share-panels {
             padding-top: 8px;
